--- a/TIL-0820.md
+++ b/TIL-0820.md
@@ -49,7 +49,7 @@ connect(mapStateToProps, mapDispatchToProps)(MyApp)
 ```
 표현이 처음엔 생소했는데, 지금 보니 currying을 활용한 함수형 프로그래밍스러운 설계였다는 생각이 드네요.
 
-### Reasonml 에서의 tuple 사용 (link)[https://reasonml.github.io/docs/en/basic-structures#tuple]
+### Reasonml 에서의 tuple 사용 [link](https://reasonml.github.io/docs/en/basic-structures#tuple)
 
 - tuple은 immutable, constant size, heterogenous collections of items 이라는 특징을 갖는 타입입니다.
 ```javascript
