--- a/TIL-0821.md
+++ b/TIL-0821.md
@@ -1,8 +1,8 @@
 
-### 오늘의 키워드 : ->와 =>의 차이, Stream
+### 오늘의 키워드 : ->와 =>의 차이
 
 
-### ->와 =>의 차이
+### 1. ->와 =>의 차이
 - 함수형 프로그래밍에서 처음 헷갈렸던 것은 두 종류의 화살표 표기였습니다. -> => 가 무엇이 다른가 한번 알아봅시다. 우선 실제 코드에서 쓰인 예시입니다.
 
 ```javascript
