--- a/TIL-0824.md
+++ b/TIL-0824.md
@@ -1,4 +1,4 @@
-### 오늘의 키워드 : ReasonML 에서 Stream 사용하기, 자기 자신을 멤버로 가지는 type 사용해보기
+### 오늘의 키워드 : ReasonML 에서 Stream 사용하기
 
 ### ReasonML 에서 Stream 사용하기
 - Stream 이란 간단히 얘기해 **데이터의 흐름** 입니다. ioStream은 자바에서는 굉장히 많이 사용되는 개념으로, 아래처럼 read()등을 사용하여 단위 정보를 읽어올 수 있는데요, 
