--- a/TIL-0825.md
+++ b/TIL-0825.md
@@ -2,10 +2,7 @@
 
 ### 오늘의 키워드 : Functors, ~~Applicatives, 그리고 Monads~~
 
-- 함수형 프로그래밍을 접하면 자주 듣게되는 키워드 ~~세가지~~에 대해, 최대한 간단하게 제가 이해한 바를 적어보도록 하겠습니다. 이번 포스팅을 위해 [링크1](https://dev.to/kevanstannard/functors-applicatives-and-monads-in-pictures-in-reasonml-3p44), [링크2](https://hackernoon.com/fun-with-functors-and-reasonml-8bb59b243e9c), [링크3](http://adit.io/posts/2013-04-17-functors,_applicatives,_and_monads_in_pictures.html#monads), [링크4](https://medium.com/@dtinth/what-is-a-functor-dcf510b098b6)를 참고하였습니다.
-
-```javascript
-```
+- 함수형 프로그래밍을 접하면 자주 듣게되는 키워드에 대해, 최대한 간단하게 제가 이해한 바를 적어보도록 하겠습니다. 이번 포스팅을 위해 [링크1](https://dev.to/kevanstannard/functors-applicatives-and-monads-in-pictures-in-reasonml-3p44), [링크2](https://hackernoon.com/fun-with-functors-and-reasonml-8bb59b243e9c), [링크3](http://adit.io/posts/2013-04-17-functors,_applicatives,_and_monads_in_pictures.html#monads), [링크4](https://medium.com/@dtinth/what-is-a-functor-dcf510b098b6)를 참고하였습니다.
 
 ##### Functors
 - Functor란, 쉽게 말해 매핑될 수 있는 매핑될 수 있는 것들을 말합니다. (OOP 스럽게 얘기하자면 Mappable 의 implementation 입니다.) functor는 함수에 의해 매핑 될 수 있는 성질을 가집니다. 간단한 예시를 살펴 봅시다. 
