--- a/TIL-0901.md
+++ b/TIL-0901.md
@@ -1,6 +1,6 @@
 # JS interop - 함수 바인딩
 
-- 어제에 이어서 함수 바인딩에 대해서 끝까지 알아보겠습니다.
+어제에 이어서 함수 바인딩에 대해서 끝까지 알아보겠습니다.
 ## Variadic 함수 바인딩
 - JS 함수중에서는 여러개의 argument를 인자로 받는 경우가 있습니다. ReScript에서도 그런 경우를 처리해주는데요, 이 때 각 인자들은 같은 타입이어야 한다는 조건이 붙습니다. 아래는 예시입니다.
 
@@ -169,9 +169,11 @@ setOnload(x, @bs.this ((o, v) => Js.log(resp(o) + v)))
 - 먼저 x type을 지정해주고,
 - x.onload = function에 해당하는 부분을 작성합니다. 이 때, console.log는 unit를 리턴하므로 크게 볼 때 @bs.this() => unit의 형태가 됩니다.
 
-- ~~중간에 let o = this는 잘 모르겠습니다;;;~~
+1. @bs.this를 눈여겨 봅시다. 결국 x에 this가 바인딩하므로 this()의 첫번째 인자로 x가 옵니다. this(x)
+2. function(v) 에서 v가 정수이므로 this(x, int)가 되는데, 이 this 바인딩은 아무 리턴이 없으므로 unit을 리턴한다고 되어 있습니다.
+3. 마지막으로 큰 틀에서 보면 console.log 또한 리턴이 없으므로, unit을 리턴합니다.
 
 - response는 x를 받아 int를 돌려주는 형태 (this.response) 임으로 @bs.get으로 처리해줍니다. 
 - 마지막으로 setOnload를 호출합니다.
 
-- 으으.. 너무 복잡해서 한번에 잘 이해가 가지 않는데요, 내일의 TIL을 하며 내용을 보완해보겠습니다.
+- 으으.. 너무 복잡해서 한번에 잘 이해가 가지 않는데요, ~~내일의 TIL을 하며 내용을 보완해보겠습니다.~~ 보완해버렸습니다!!
