--- a/_posts/2020-08-24-stream.md
+++ b/_posts/2020-08-24-stream.md
@@ -3,6 +3,7 @@ layout: post
 title:  "ReasonML 에서 Stream 사용하기"
 date:   2020-08-24 17:53:57 +0900
 categories: jekyll update
+comments: true
 ---
 
 - Stream 이란 간단히 얘기해 **데이터의 흐름** 입니다. ioStream은 자바에서는 굉장히 많이 사용되는 개념으로, 아래처럼 read()등을 사용하여 단위 정보를 읽어올 수 있는데요, 
