--- a/_posts/2020-08-25-functor.md
+++ b/_posts/2020-08-25-functor.md
@@ -3,6 +3,7 @@ layout: post
 title:  "Functors, ~~Applicatives, 그리고 Monads~~"
 date:   2020-08-25 17:53:57 +0900
 categories: jekyll update
+comments: true
 ---
 
 - 함수형 프로그래밍을 접하면 자주 듣게되는 키워드에 대해, 최대한 간단하게 제가 이해한 바를 적어보도록 하겠습니다. 이번 포스팅을 위해 [링크1](https://dev.to/kevanstannard/functors-applicatives-and-monads-in-pictures-in-reasonml-3p44), [링크2](https://hackernoon.com/fun-with-functors-and-reasonml-8bb59b243e9c), [링크3](http://adit.io/posts/2013-04-17-functors,_applicatives,_and_monads_in_pictures.html#monads), [링크4](https://medium.com/@dtinth/what-is-a-functor-dcf510b098b6)를 참고하였습니다.
